[package]
name = "wgpu-subgroup-exposure"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
pollster = "0.2"
renderdoc = "0.10"
wgpu = "0.7"
